Convert Annotator customisations into monkeypatches
This commit moves most customisations of the upstream Annotator v1.2.x
into annotator_monkey.coffee, which monkeypatches the Annotator object.
Customisations required by the anchoring subsystem are moved into the
"enhanced anchoring" plugin.

With this change, we should be able to replace our inlined Annotator
source with the built JavaScript for upstream Annotator!

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -13,7 +13,8 @@ annotator:
     - h:static/scripts/annotator/editor.coffee
     - h:static/scripts/annotator/viewer.coffee
 
-    # Monkeypatch range.coffee
+    # Monkeypatches
+    - h:static/scripts/annotator/annotator_monkey.coffee
     - h:static/scripts/annotator/range_monkey.coffee
 
 # Annotator app plugins
