--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -1,21 +1,14 @@
 # Annotator core
 annotator:
-  filters: coffeescript, uglifyjs
+  filters: uglifyjs
   output: scripts/annotator/annotator.min.js
   contents:
-    - h:static/scripts/annotator/xpath.coffee
-    - h:static/scripts/annotator/util.coffee
-    - h:static/scripts/annotator/console.coffee
-    - h:static/scripts/annotator/class.coffee
-    - h:static/scripts/annotator/range.coffee
-    - h:static/scripts/annotator/annotator.coffee
-    - h:static/scripts/annotator/widget.coffee
-    - h:static/scripts/annotator/editor.coffee
-    - h:static/scripts/annotator/viewer.coffee
-
-    # Monkeypatches
-    - h:static/scripts/annotator/annotator_monkey.coffee
-    - h:static/scripts/annotator/range_monkey.coffee
+    - h:static/scripts/vendor/annotator.js
+    - filters: coffeescript
+      output: scripts/annotator/monkey.js
+      contents:
+        - h:static/scripts/annotator/annotator_monkey.coffee
+        - h:static/scripts/annotator/range_monkey.coffee
 
 # Annotator app plugins
 annotator_plugins_app:
