Replace Document plugin with built version

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -21,9 +21,7 @@ annotator_plugins_app:
     - filters: coffeescript
       output: scripts/annotator/plugin/bridge.js
       contents: h:static/scripts/annotator/plugin/bridge.coffee
-    - filters: coffeescript
-      output: scripts/annotator/plugin/document.js
-      contents: h:static/scripts/annotator/plugin/document.coffee
+    - h:static/scripts/vendor/annotator.document.js
     - filters: coffeescript
       output: scripts/annotator/plugin/threading.js
       contents: h:static/scripts/annotator/plugin/threading.coffee
@@ -41,9 +39,7 @@ annotator_plugins_inject:
     - filters: coffeescript
       output: scripts/annotator/plugin/bucket-bar.js
       contents: h:static/scripts/annotator/plugin/bucket-bar.coffee
-    - filters: coffeescript
-      output: scripts/annotator/plugin/document.js
-      contents: h:static/scripts/annotator/plugin/document.coffee
+    - h:static/scripts/vendor/annotator.document.js
     - filters: coffeescript
       output: scripts/annotator/plugin/toolbar.js
       contents: h:static/scripts/annotator/plugin/toolbar.coffee
