--- a/development.ini
+++ b/development.ini
@@ -36,6 +36,8 @@ pyramid.includes:
 
 # Set a default persistent secret for development. DO NOT copy this into a
 # production settings file.
+h.client_id: nosuchid
+h.client_secret: nosuchsecret
 session.secret: notverysecretafterall
 
 sqlalchemy.url: sqlite:///h.db
