Add URL polyfill

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -142,7 +142,11 @@ wgxpath:
   output: scripts/vendor/polyfills/wgxpath.install.min.js
   contents:
     - h:static/scripts/vendor/polyfills/wgxpath.install.js
-
+url:
+  filters: uglifyjs
+  output: scripts/vendor/polyfills/url.min.js
+  contents:
+    - h:static/scripts/vendor/polyfills/url.js
 
 # Other dependencies
 jschannel:
@@ -210,6 +214,7 @@ app_js:
     - momentjs
     - pagedown
     - autofill
+    - url
     - unorm
     - uuid
     - angular_tags_input
