Replace documentHelpers with baseURI + URL API
Rather than have a service, ``documentHelpers``, that exposes a value,
``baseURI``, and a function, ``absoluteURI``, decorate ``$document``
so that it's guaranteed to have a ``baseURI`` property and use the
previously included ``URL`` constructor as a standard way to get parts
of a URL.

--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -215,6 +215,7 @@ app_js:
     - pagedown
     - autofill
     - unorm
+    - url
     - uuid
     - angular_tags_input
     - h:static/scripts/vendor/katex/katex.js
