--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -234,12 +234,12 @@ app_js:
             - h:static/scripts/directives.coffee
             - h:static/scripts/directives/*.coffee
             - h:static/scripts/filters.coffee
-            - h:static/scripts/persistence.coffee
             - h:static/scripts/searchfilters.coffee
             - h:static/scripts/services.coffee
             - h:static/scripts/*-service.coffee
             - h:static/scripts/streamsearch.coffee
-            - h:static/scripts/cross-frame-sync.coffee
+            - h:static/scripts/annotation-*.coffee
+            - h:static/scripts/cross-frame-*.coffee
 
 app_css:
     filters: cleancss, cssrewrite
