Make notifications on the default

--- a/production.ini
+++ b/production.ini
@@ -18,7 +18,7 @@ basemodel.should_create_all: False
 # Feature flags
 h.feature.api: True
 h.feature.streamer: True
-h.feature.notification: False
+h.feature.notification: True
 
 # User and group framework settings -- see horus documentation
 # Used by the local authentication provider
