--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,9 @@ script:
   - make test
   - prospector -P .prospector.yaml h
   - hypothesis extension development.ini chrome http://localhost
-  - hypothesis extension production.ini chrome https://hypothes.is chrome-extension://notarealkey/public
+  - SESSION_SECRET=foo hypothesis extension production.ini chrome https://hypothes.is chrome-extension://notarealkey/public
   - hypothesis extension development.ini firefox http://localhost
-  - hypothesis extension production.ini firefox https://hypothes.is resource://notarealkey/hypothesis/data
+  - SESSION_SECRET=foo hypothesis extension production.ini firefox https://hypothes.is resource://notarealkey/hypothesis/data
 notifications:
   irc:
     channels:
