--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -12,18 +12,7 @@ annotator:
 annotator_plugins_app:
   filters: uglifyjs
   output: scripts/annotator/annotator-app.min.js
-  contents:
-    - h:static/scripts/vendor/annotator.auth.js
-    - filters: coffeescript
-      output: scripts/annotator/plugin/bridge.js
-      contents:
-       - h:static/scripts/annotator/plugin/bridge.coffee
-       - h:static/scripts/cross-frame-discovery.coffee
-       - h:static/scripts/cross-frame-bridge.coffee
-       - h:static/scripts/annotation-sync.coffee
-    - filters: coffeescript
-      output: scripts/annotator/plugin/threading.js
-      contents: h:static/scripts/annotator/plugin/threading.coffee
+  contents: h:static/scripts/vendor/annotator.auth.js
 
 # Annotator inject plugins
 annotator_plugins_inject:
@@ -34,7 +23,11 @@ annotator_plugins_inject:
     # Non-anchoring-related stuff
     - filters: coffeescript
       output: scripts/annotator/plugin/bridge.js
-      contents: h:static/scripts/annotator/plugin/bridge.coffee
+      contents:
+       - h:static/scripts/annotator/plugin/bridge.coffee
+       - h:static/scripts/cross-frame-discovery.coffee
+       - h:static/scripts/cross-frame-bridge.coffee
+       - h:static/scripts/annotation-sync.coffee
     - filters: coffeescript
       output: scripts/annotator/plugin/bucket-bar.js
       contents: h:static/scripts/annotator/plugin/bucket-bar.coffee
