Travis config fix for prospector 0.9.6
Prospector requires the profile to be in the profile path, this by
default includes the directory to be profiled so we make the path
relative to that.

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ services:
   - elasticsearch
 script:
   - make test
-  - prospector -P .prospector.yaml h
+  - prospector -P ../.prospector.yaml h
   - hypothesis extension development.ini chrome http://localhost
   - SESSION_SECRET=foo hypothesis extension production.ini chrome https://hypothes.is chrome-extension://notarealkey/public
   - hypothesis extension development.ini firefox http://localhost
