--- a/production.ini
+++ b/production.ini
@@ -1,6 +1,9 @@
-[app:main]
+[pipeline:main]
+pipeline: proxy-prefix raven h
+
+
+[app:h]
 use: egg:h
-filter-with: proxy-prefix
 
 # ElasticSearch configuration
 #es.host: http://localhost:9200
@@ -35,7 +38,6 @@ mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 # Include any deployment-specific pyramid add-ons here
 pyramid.includes:
     h.accounts
-    h.sentry
     pyramid_basemodel
     pyramid_mailer
     pyramid_redis_sessions
@@ -74,17 +76,21 @@ webassets.coffee_bin: %(here)s/node_modules/.bin/coffee
 use: egg:PasteDeploy#prefix
 
 
+[filter:raven]
+use: egg:raven#raven
+
+
 [server:main]
 use: egg:gunicorn
 worker_class: h.server.Worker
 
 
 [loggers]
-keys = root, gunicorn.error, alembic
+keys = root, sentry, gunicorn.error, alembic
 
 
 [handlers]
-keys = console
+keys = console, sentry
 
 
 [formatters]
@@ -92,7 +98,14 @@ keys = generic
 
 
 [logger_root]
+handlers = console, sentry
+
+
+[logger_sentry]
+level = WARN
 handlers = console
+qualname = sentry.errors
+propagate = 0
 
 
 [logger_gunicorn.error]
@@ -109,6 +122,13 @@ qualname = alembic
 [handler_console]
 class = StreamHandler
 args = ()
+formatter = generic
+
+
+[handler_sentry]
+class = raven.handlers.logging.SentryHandler
+args = ()
+level = WARN
 formatter = generic
 
 
