--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -241,7 +241,7 @@ app_css:
     filters: cleancss, cssrewrite
     output: styles/app.min.css
     contents:
-      - h:static/styles/icomoon.css
+      - h:static/icomoon.css
       - h:static/scripts/vendor/katex/katex.min.css
       - filters: compass
         output: styles/app.css
@@ -346,7 +346,7 @@ inject_css:
   output: styles/hypothesis.min.css
   filters: cleancss, cssrewrite
   contents:
-    - h:static/styles/icomoon.css
+    - h:static/icomoon.css
     - filters: compass
       output: styles/inject.css
       contents:
