Default create models in dev

--- a/development.ini
+++ b/development.ini
@@ -5,9 +5,7 @@ pipeline: h
 [app:h]
 use: egg:h
 
-# Don't create/update indices and mappings by default. You will need to
-# uncomment this if running multiple web workers.
-#basemodel.should_create_all = False
+basemodel.should_create_all: True
 
 es.host: http://localhost:9200
 
