Use our own autologin setting
The horus autologin setting makes assumptions about the desired value of
user identifiers that we violate. Specifically, horus will happily put
an integer userid in the session while we refer to users only by their
usernames.

Decouple ourselves from horus by using the default value of
horus.autologin (False) and providing our own autologin bound to the
h.autologin setting.

Fixes #1947.

--- a/development.ini
+++ b/development.ini
@@ -9,12 +9,13 @@ basemodel.should_create_all: True
 
 es.host: http://localhost:9200
 
+h.autologin: True
+
 h.feature.api: True
 h.feature.streamer: True
 h.feature.notification: False
 
 horus.allow_email_auth: True
-horus.autologin: True
 horus.require_activation: False
 
 horus.login_redirect: stream
