--- a/production.ini
+++ b/production.ini
@@ -9,6 +9,8 @@ use: egg:h
 #es.host: http://localhost:9200
 #es.index: annotator
 
+#h.autologin: False
+
 # OAuth settings
 # These client credentials are used by the built-in Web client.
 # If not provided, both default to a random URL-safe base64-encoded string.
@@ -26,7 +28,6 @@ horus.login_redirect: stream
 horus.logout_redirect: login
 horus.activate_redirect: login
 
-#horus.autologin: False
 #horus.allow_email_auth: False
 #horus.require_activation: True
 
