Add claim application
This adds the "claim" application under the feature flag of the same
name.

--- a/development.ini
+++ b/development.ini
@@ -13,6 +13,7 @@ h.autologin: True
 
 h.feature.accounts: True
 h.feature.api: True
+h.feature.claim: True
 h.feature.streamer: True
 h.feature.notification: False
 
