--- a/production.ini
+++ b/production.ini
@@ -20,6 +20,7 @@ use: egg:h
 # Feature flags
 h.feature.accounts: True
 h.feature.api: True
+h.feature.claim: False
 h.feature.streamer: True
 h.feature.notification: True
 
