--- a/production.ini
+++ b/production.ini
@@ -18,6 +18,7 @@ use: egg:h
 #h.client_secret:
 
 # Feature flags
+h.feature.accounts: True
 h.feature.api: True
 h.feature.streamer: True
 h.feature.notification: True
@@ -38,7 +39,6 @@ mail.default_sender: "Annotation Daemon" <no-reply@localhost>
 
 # Include any deployment-specific pyramid add-ons here
 pyramid.includes:
-    h.accounts
     pyramid_basemodel
     pyramid_mailer
     pyramid_redis_sessions
