--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "version": "0.0.0",
   "description": "The Internet, peer reviewed.",
   "dependencies": {
-    "coffee-script": "1.7.1",
+    "browserify": "^9.0.3",
+    "browserify-shim": "^3.8.3",
     "clean-css": "2.2.2",
+    "coffee-script": "1.7.1",
+    "coffeeify": "^1.0.0",
     "uglify-js": "2.4.14"
   },
   "devDependencies": {
@@ -32,5 +35,27 @@
   "bugs": {
     "url": "https://github.com/hypothesis/h/issues"
   },
-  "homepage": "https://github.com/hypothesis/h"
+  "homepage": "https://github.com/hypothesis/h",
+  "browserify": {
+    "transform": ["coffeeify", "browserify-shim"]
+  },
+  "browser": {
+    "jquery": "./h/static/scripts/vendor/jquery.js",
+    "annotator": "./h/static/scripts/vendor/annotator.js",
+    "angular": "./h/static/scripts/vendor/angular.js"
+  },
+  "browserify-shim": {
+    "jquery": "global:jQuery",
+    "annotator": "global:Annotator",
+    "angular": "global:angular",
+    "./h/static/scripts/vendor/jschannel.js": "Channel",
+    "./h/static/scripts/vendor/page_text_mapper_core.js": "PageTextMapperCore",
+    "./h/static/scripts/vendor/dom_text_matcher.js": {
+      "exports": "DomTextMatcher",
+      "depends": [
+        "./h/static/scripts/vendor/diff_match_patch_uncompressed.js",
+        "./h/static/scripts/vendor/text_match_engines.js"
+      ]
+    }
+  }
 }
