--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -1,131 +1,46 @@
-# Annotator core
+# Annotator
 annotator:
   filters: uglifyjs
-  output: scripts/annotator/annotator.min.js
-  contents:
-    - h:static/scripts/vendor/annotator.js
-    - filters: coffeescript
-      output: scripts/annotator/monkey.js
-      contents: h:static/scripts/annotator/monkey.coffee
+  output: scripts/vendor/annotator.min.js
+  contents: h:static/scripts/vendor/annotator.js
 
-# Annotator app plugins
-annotator_plugins_app:
-  filters: uglifyjs
-  output: scripts/annotator/annotator-app.min.js
-  contents: h:static/scripts/vendor/annotator.auth.js
-
-# Annotator inject plugins
-annotator_plugins_inject:
-  filters: uglifyjs
-  output: scripts/annotator/annotator-inject.min.js
-  contents:
-
-    # Non-anchoring-related stuff
-    - filters: coffeescript
-      output: scripts/annotator/plugin/bridge.js
-      contents:
-       - h:static/scripts/annotator/plugin/cross-frame.coffee
-       - h:static/scripts/discovery.coffee
-       - h:static/scripts/bridge.coffee
-       - h:static/scripts/annotation-sync.coffee
-    - filters: coffeescript
-      output: scripts/annotator/plugin/bucket-bar.js
-      contents: h:static/scripts/annotator/plugin/bucket-bar.coffee
-    - h:static/scripts/vendor/annotator.document.js
-    - filters: coffeescript
-      output: scripts/annotator/plugin/toolbar.js
-      contents: h:static/scripts/annotator/plugin/toolbar.coffee
-
-    # Drawing highlights
-    - filters: coffeescript
-      output: scripts/annotator/plugin/texthighlights.js
-      contents: h:static/scripts/annotator/plugin/texthighlights.coffee
-
-    # Creating selections
-    - filters: coffeescript
-      output: scripts/annotator/plugin/textselection.js
-      contents: h:static/scripts/annotator/plugin/textselection.coffee
-
-    # URL fragments
-    - filters: coffeescript
-      output: scripts/annotator/plugin/fragmentselector.js
-      contents: h:static/scripts/annotator/plugin/fragmentselector.coffee
-
-    # Anchoring
-    - h:static/scripts/vendor/dom_text_mapper.js
-    - filters: coffeescript
-      output: scripts/annotator/annotator.anchoring.js
-      contents:
-       - h:static/scripts/annotator/plugin/enhancedanchoring.coffee
-       - h:static/scripts/annotator/plugin/domtextmapper.coffee
-       - h:static/scripts/annotator/plugin/textposition.coffee
-       - h:static/scripts/annotator/plugin/textquote.coffee
-       - h:static/scripts/annotator/plugin/textrange.coffee
-
-    # PDF
-    - h:static/scripts/vendor/page_text_mapper_core.js
-    - filters: coffeescript
-      output: scripts/annotator/annotator.pdf.js
-      contents: h:static/scripts/annotator/plugin/pdf.coffee
-
-    # Fuzzy
-    - h:static/scripts/vendor/diff_match_patch_uncompressed.js
-    - h:static/scripts/vendor/dom_text_matcher.js
-    - h:static/scripts/vendor/text_match_engines.js
-    - filters: coffeescript
-      output: scripts/annotator/annotator.fuzzy.js
-      contents:
-        - h:static/scripts/annotator/plugin/fuzzytextanchors.coffee
 
 # Angular
 angular:
   filters: uglifyjs
   output: scripts/vendor/angular.min.js
-  contents:
-    - h:static/scripts/vendor/angular.js
+  contents: h:static/scripts/vendor/angular.js
 angular_animate:
   filters: uglifyjs
   output: scripts/vendor/angular-animate.min.js
-  contents:
-    - h:static/scripts/vendor/angular-animate.js
+  contents: h:static/scripts/vendor/angular-animate.js
 angular_bootstrap:
   filters: uglifyjs
   output: scripts/vendor/angular-bootstrap.min.js
-  contents:
-    - h:static/scripts/vendor/angular-bootstrap.js
+  contents: h:static/scripts/vendor/angular-bootstrap.js
 angular_resource:
   filters: uglifyjs
   output: scripts/vendor/angular-resource.min.js
-  contents:
-    - h:static/scripts/vendor/angular-resource.js
+  contents: h:static/scripts/vendor/angular-resource.js
 angular_route:
   filters: uglifyjs
   output: scripts/vendor/angular-route.min.js
-  contents:
-    - h:static/scripts/vendor/angular-route.js
+  contents: h:static/scripts/vendor/angular-route.js
 angular_sanitize:
   filters: uglifyjs
   output: scripts/vendor/angular-sanitize.min.js
-  contents:
-    - h:static/scripts/vendor/angular-sanitize.js
+  contents: h:static/scripts/vendor/angular-sanitize.js
 angular_tags_input:
   filters: uglifyjs
   output: scripts/vendor/ng-tags-input.min.js
-  contents:
-    - h:static/scripts/vendor/ng-tags-input.js
+  contents: h:static/scripts/vendor/ng-tags-input.js
 
 
 # jQuery
 jquery:
   filters: uglifyjs
   output: scripts/vendor/jquery.min.js
-  contents:
-    - h:static/scripts/vendor/jquery.js
-jquery_scrollintoview:
-  filters: uglifyjs
-  output: scripts/vendor/jquery.scrollintoview.min.js
-  contents:
-    - h:static/scripts/vendor/jquery.scrollintoview.js
+  contents: h:static/scripts/vendor/jquery.js
 
 
 # TeX rendering
@@ -139,63 +54,37 @@ katex:
 autofill:
   filters: uglifyjs
   output: scripts/vendor/polyfills/autofill-event.min.js
-  contents:
-    - h:static/scripts/vendor/polyfills/autofill-event.js
+  contents: h:static/scripts/vendor/polyfills/autofill-event.js
+bind:
+  filters: uglifyjs
+  output: scripts/vendor/polyfills/bind.min.js
+  contents: h:static/scripts/vendor/polyfills/bind.js
 wgxpath:
   filters: uglifyjs
   output: scripts/vendor/polyfills/wgxpath.install.min.js
-  contents:
-    - h:static/scripts/vendor/polyfills/wgxpath.install.js
+  contents: h:static/scripts/vendor/polyfills/wgxpath.install.js
 url:
   filters: uglifyjs
   output: scripts/vendor/polyfills/url.min.js
-  contents:
-    - h:static/scripts/vendor/polyfills/url.js
+  contents: h:static/scripts/vendor/polyfills/url.js
+
 
 # Other dependencies
-jschannel:
-  filters: uglifyjs
-  output: scripts/vendor/jschannel.min.js
-  contents:
-    - h:static/scripts/vendor/jschannel.js
-jwz:
-  filters: uglifyjs
-  output: scripts/vendor/jwz.min.js
-  contents:
-    - h:static/scripts/vendor/jwz.js
 momentjs:
   contents:
     - filters: uglifyjs
       output: scripts/vendor/moment.min.js
-      contents:
-      - h:static/scripts/vendor/moment-with-langs.js
+      contents: h:static/scripts/vendor/moment-with-langs.js
     - filters: uglifyjs
       output: scripts/vendor/jstz.min.js
-      contents:
-      - h:static/scripts/vendor/jstz.js
+      contents: h:static/scripts/vendor/jstz.js
     - filters: uglifyjs
       output: scripts/vendor/moment-timezone.min.js
-      contents:
-      - h:static/scripts/vendor/moment-timezone.js
+      contents: h:static/scripts/vendor/moment-timezone.js
     - filters: uglifyjs
       output: scripts/vendor/moment-timezone-data.min.js
-      contents:
-      - h:static/scripts/vendor/moment-timezone-data.js
-pagedown:
-  filters: uglifyjs
-  output: scripts/vendor/Markdown.Converter.min.js
-  contents:
-    - h:static/scripts/vendor/Markdown.Converter.js
-unorm:
-  filters: uglifyjs
-  output: scripts/vendor/unorm.min.js
-  contents:
-    - h:static/scripts/vendor/unorm.js
-uuid:
-  filters: uglifyjs
-  output: scripts/vendor/uuid.min.js
-  contents:
-    - h:static/scripts/vendor/uuid.js
+      contents: h:static/scripts/vendor/moment-timezone-data.js
+
 
 # Application
 app:
@@ -203,46 +92,33 @@ app:
     - jquery
     - angular
     - angular_animate
+    - angular_bootstrap
     - angular_resource
     - angular_route
     - angular_sanitize
+    - angular_tags_input
+    - annotator
+    - autofill
+    - bind
+    - katex
+    - momentjs
+    - url
+    - helpers
     - app_css
     - app_js
-    - helpers
 
 app_js:
   output: scripts/app.min.js
-  contents:
-    - jschannel
-    - jwz
-    - katex
-    - momentjs
-    - pagedown
-    - autofill
-    - unorm
-    - url
-    - uuid
-    - angular_tags_input
-    - annotator
-    - annotator_plugins_app
-    - filters: uglifyjs
-      contents:
-        - filters: coffeescript
-          output: scripts/app.js
-          contents:
-            - h:static/scripts/app.coffee
-            - h:static/scripts/controllers.coffee
-            - h:static/scripts/directives.coffee
-            - h:static/scripts/directives/*.coffee
-            - h:static/scripts/filters.coffee
-            - h:static/scripts/searchfilters.coffee
-            - h:static/scripts/services.coffee
-            - h:static/scripts/*-service.coffee
-            - h:static/scripts/streamsearch.coffee
-            - h:static/scripts/annotation-sync.coffee
-            - h:static/scripts/annotation-ui-sync.coffee
-            - h:static/scripts/bridge.coffee
-            - h:static/scripts/discovery.coffee
+  filters:
+    - browserify
+    - uglifyjs
+  contents: h:static/scripts/app.coffee
+  depends:
+    - h:static/scripts/*.coffee
+    - h:static/scripts/annotator/*.coffee
+    - h:static/scripts/annotator/plugin/*.coffee
+    - h:static/scripts/directives/*.coffee
+    - h:static/scripts/session/*.coffee
 
 app_css:
     filters: cleancss, cssrewrite
@@ -280,46 +156,32 @@ account:
   contents:
     - jquery
     - angular
+    - angular_bootstrap
     - angular_route
     - helpers
     - session
     - output: scripts/account.min.js
-      filters: uglifyjs
-      contents:
-        - output: scripts/account.js
-          filters: coffeescript
-          contents:
-            - h:static/scripts/account/account.coffee
-            - h:static/scripts/account/*-controller.coffee
-            - h:static/scripts/account/*-service.coffee
-
+      filters:
+        - browserify
+        - uglifyjs
+      contents: h:static/scripts/account/account.coffee
+      depends: h:static/scripts/account/*
 
 helpers:
   output: scripts/helpers.min.js
-  contents:
-    - angular_bootstrap
-    - filters: uglifyjs
-      contents:
-        - filters: coffeescript
-          output: scripts/helpers.js
-          contents:
-            - h:static/scripts/helpers/helpers.coffee
-            - h:static/scripts/helpers/*-helpers.coffee
-            - h:static/scripts/helpers/*-service.coffee
-
+  filters:
+    - browserify
+    - uglifyjs
+  contents: h:static/scripts/helpers/helpers.coffee
+  depends: h:static/scripts/helpers/*
 
 session:
   output: scripts/session.min.js
-  contents:
-    - contents:
-      - filters: uglifyjs
-        contents:
-          - filters: coffeescript
-            output: scripts/session.js
-            contents:
-              - h:static/scripts/session/session.coffee
-              - h:static/scripts/session/*-service.coffee
-
+  filters:
+    - browserify
+    - uglifyjs
+  contents: h:static/scripts/session/session.coffee
+  depends: h:static/scripts/session/*
 
 # The inject bundle is intended to be loaded into pages for bootstrapping
 # the application. It sets up RPC channels for cross-domain communication
@@ -331,23 +193,18 @@ inject:
     - inject_js
 
 inject_js:
-  output: scripts/hypothesis.min.js
   contents:
-    - jquery
-    - jquery_scrollintoview
-    - jschannel
-    - annotator
-    - annotator_plugins_inject
-    - url
-    - filters: uglifyjs
-      contents:
-        - filters: coffeescript
-          output: scripts/hypothesis.js
-          contents:
-            - h:static/scripts/guest.coffee
-            - h:static/scripts/host.coffee
-        - h:static/bootstrap.js
-
+  - jquery
+  - annotator
+  - output: scripts/hypothesis.min.js
+    filters: browserify
+    contents: h:static/bootstrap.js
+    depends:
+      - h:static/scripts/*.coffee
+      - h:static/scripts/annotator/*.coffee
+      - h:static/scripts/annotator/plugin/*.coffee
+      - h:static/scripts/directives/*.coffee
+      - h:static/scripts/session/*.coffee
 
 inject_css:
   output: styles/hypothesis.min.css
