--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -128,6 +128,13 @@ jquery_scrollintoview:
     - h:static/scripts/vendor/jquery.scrollintoview.js
 
 
+# TeX rendering
+katex:
+  filters: uglifyjs
+  output: scripts/vendor/katex/katex.min.js
+  contents: h:static/scripts/vendor/katex/katex.js
+
+
 # Polyfills
 autofill:
   filters: uglifyjs
@@ -208,6 +215,7 @@ app_js:
   contents:
     - jschannel
     - jwz
+    - katex
     - momentjs
     - pagedown
     - autofill
@@ -215,7 +223,6 @@ app_js:
     - url
     - uuid
     - angular_tags_input
-    - h:static/scripts/vendor/katex/katex.js
     - annotator
     - annotator_plugins_app
     - filters: uglifyjs
