--- a/development.ini
+++ b/development.ini
@@ -39,7 +39,8 @@ pyramid.includes:
 # production settings file.
 h.client_id: nosuchid
 h.client_secret: nosuchsecret
-session.secret: notverysecretafterall
+
+secret_key: notverysecretafterall
 
 sqlalchemy.url: sqlite:///h.db
 
