Make it possible to instantiate the API from paste
At the moment it's not easy to get a shell with `h.auth` configured,
because only the API application includes `h.auth` and there is no easy
way to get a pshell[1] for the API.

This commit adds a setuptools `paste.app_factory` entrypoint for the API
application, making it possible to run

    pshell development.ini#api

to get a shell configured for the API.

[1]: http://docs.pylonsproject.org/projects/pyramid/en/1.5-branch/narr/commandline.html

--- a/development.ini
+++ b/development.ini
@@ -2,6 +2,14 @@
 pipeline: h
 
 
+[app:api]
+use: egg:h#api
+
+basemodel.should_create_all: True
+
+h.feature.streamer: True
+h.feature.notification: False
+
 [app:h]
 use: egg:h
 
