Move chrome background.js to lib/install.js

--- a/h/browser/chrome/manifest.json
+++ b/h/browser/chrome/manifest.json
@@ -35,7 +35,7 @@
       "lib/help-page.js",
       "lib/errors.js",
       "lib/hypothesis-chrome-extension.js",
-      "background.js"
+      "lib/install.js"
     ]
   },
   "browser_action": {
