Run prospector from the root directory
This simplifies the invocation and it also seems to cause prospector
to pick up on files that it wasn't completely checking before.

Also, fix a few small things in the prospector profile:

- output-format rather than output_format
- use ignore-paths rather than the deprecated ignore option

--- a/.prospector.yaml
+++ b/.prospector.yaml
@@ -1,4 +1,4 @@
-output_format: grouped
+output-format: grouped
 inherits:
   - full_pep8
   - strictness_low
@@ -14,6 +14,7 @@ pylint:
 pep8:
   options:
     max-line-length: 79
-ignore:
-  - "^_version.py"
-  - "^migrations/"
+ignore-paths:
+  - h/_version.py
+  - h/migrations/
+  - versioneer.py
