Move /tools to /bin
We may want this to get installed at some future time.

--- a/production.ini
+++ b/production.ini
@@ -67,7 +67,7 @@ webassets.cache_max_age: 31536000
 webassets.static_view: True
 webassets.uglifyjs_bin: %(here)s/node_modules/.bin/uglifyjs
 webassets.cleancss_bin: %(here)s/node_modules/.bin/cleancss
-webassets.browserify_pipe_bin: %(here)s/tools/browserify-pipe
+webassets.browserify_pipe_bin: %(here)s/bin/browserify-pipe
 
 
 [filter:proxy-prefix]
