--- a/development.ini
+++ b/development.ini
@@ -60,7 +60,7 @@ webassets.manifest: False
 webassets.static_view: True
 webassets.uglifyjs_bin: %(here)s/node_modules/.bin/uglifyjs
 webassets.cleancss_bin: %(here)s/node_modules/.bin/cleancss
-webassets.browserify_pipe_bin: %(here)s/tools/browserify-pipe
+webassets.browserify_pipe_bin: %(here)s/bin/browserify-pipe
 
 ;http://docs.pylonsproject.org/projects/pyramid-debugtoolbar/en/latest/#settings
 debugtoolbar.show_on_exc_only: True
