--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,3 +5,4 @@ recursive-include h/static/images *.gif *.jpg *.png
 recursive-include h/static/fonts *.eot *.svg *.ttf *.woff
 recursive-include h/static/scripts *.coffee *.js
 recursive-include h/static/styles *.css *.scss
+include h/_version.py
