--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,14 @@ services:
 script:
   - make test
   - make lint
-  - hypothesis-buildext development.ini chrome --base http://localhost
-  - hypothesis-buildext production.ini chrome --base https://hypothes.is --assets chrome-extension://notarealkey/public
-  - hypothesis-buildext development.ini firefox --base http://localhost
-  - hypothesis-buildext production.ini firefox --base https://hypothes.is --assets resource://notarealkey/hypothesis/data
+  - hypothesis-buildext config/development.ini chrome --base http://localhost
+  - hypothesis-buildext config/development.ini firefox --base http://localhost
+  - "hypothesis-buildext config/production.ini chrome
+    --base https://hypothes.is
+    --assets chrome-extension://notarealkey/public"
+  - "hypothesis-buildext config/production.ini firefox
+    --base https://hypothes.is
+    --assets resource://notarealkey/hypothesis/data"
 after_success:
   - coveralls
 notifications:
