Add Python test back to make test

--- a/development.ini
+++ b/development.ini
@@ -49,7 +49,7 @@ h.client_secret: nosuchsecret
 
 secret_key: notverysecretafterall
 
-sqlalchemy.url: sqlite:///h.db
+sqlalchemy.url: sqlite:///.h.db
 
 jinja2.extensions: h.jinja_extensions:IncludeRawExtension
 
