--- a/conf/development.ini
+++ b/conf/development.ini
@@ -58,9 +58,9 @@ webassets.base_url: assets
 webassets.debug: True
 webassets.manifest: False
 webassets.static_view: True
-webassets.uglifyjs_bin: %(here)s/node_modules/.bin/uglifyjs
-webassets.cleancss_bin: %(here)s/node_modules/.bin/cleancss
-webassets.browserify_pipe_bin: %(here)s/bin/browserify-pipe
+webassets.uglifyjs_bin: node_modules/.bin/uglifyjs
+webassets.cleancss_bin: node_modules/.bin/cleancss
+webassets.browserify_pipe_bin: bin/browserify-pipe
 
 ;http://docs.pylonsproject.org/projects/pyramid-debugtoolbar/en/latest/#settings
 debugtoolbar.show_on_exc_only: True
