--- a/conf/test.ini
+++ b/conf/test.ini
@@ -12,9 +12,9 @@ webassets.coffee_no_bare: True
 webassets.debug: True
 webassets.manifest: False
 webassets.static_view: True
-webassets.uglifyjs_bin: %(here)s/node_modules/.bin/uglifyjs
-webassets.cleancss_bin: %(here)s/node_modules/.bin/cleancss
-webassets.coffee_bin: %(here)s/node_modules/.bin/coffee
+webassets.uglifyjs_bin: node_modules/.bin/uglifyjs
+webassets.cleancss_bin: node_modules/.bin/cleancss
+webassets.coffee_bin: node_modules/.bin/coffee
 
 [loggers]
 keys = root, h
