--- a/h/assets.yaml
+++ b/h/assets.yaml
@@ -89,6 +89,7 @@ momentjs:
 # Application
 app:
   contents:
+    - h:static/icomoon.css
     - jquery
     - angular
     - angular_animate
@@ -121,10 +122,9 @@ app_js:
     - h:static/scripts/session/*.coffee
 
 app_css:
-    filters: cleancss, cssrewrite
+    filters: cleancss
     output: styles/app.min.css
     contents:
-      - h:static/icomoon.css
       - h:static/scripts/vendor/katex/katex.min.css
       - filters: compass
         output: styles/app.css
@@ -189,6 +189,7 @@ session:
 # plugin.
 inject:
   contents:
+    - h:static/icomoon.css
     - inject_css
     - inject_js
 
@@ -210,9 +211,8 @@ inject_js:
 
 inject_css:
   output: styles/hypothesis.min.css
-  filters: cleancss, cssrewrite
+  filters: cleancss
   contents:
-    - h:static/icomoon.css
     - filters: compass
       output: styles/inject.css
       contents:
